<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- untitled strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="recommend_food_string">member</string>
	<string name="food_name_string">menu</string>
	<string name="r_string">R</string>
	<string name="down_bar">down_bar</string>
	<string name="upbar1">upbar!</string>
	<string name="line_foodinfo2">line_foodinfo2</string>
	<!-- strings.xml -->
	<string name="some_id">음식이름 검색</string>
	<!-- strings.xml -->
	<string name="yormot_text">yam</string>
	<!-- strings.xml -->
	<string name="id">ID</string>
	<!-- strings.xml -->
	<string name="food_name">음식이름</string>
	<!-- strings.xml -->
	<string name="level">난이도:쉬움</string>
	<!-- strings.xml -->
	<string name="time">30분</string>
	<!-- strings.xml -->
	<string name="kcal">300 kcal</string>
	<!-- strings.xml -->
	<string name="login">Login</string>
	<!-- strings.xml -->
	<string name="password">비밀번호</string>

	<string name="agree">회원탈퇴동의</string>

	<string name="withdrawalbutton">회원탈퇴</string>

	<string name="in">IN</string>

	<string name="out">OUT</string>

	<string name="snack">안주</string>

	<string name="conv">간편식</string>
	<string name="chinese">중식</string>
	<string name="japanese">일식</string>

	<string name="western">양식</string>
	<string name="korean">한식</string>

	<string name="id_string">ID</string>
	<string name="level_string">easy</string>
	<string name="_30m_string">30m</string>
	<string name="_300_kcal_string">300 kcal</string>
	<string name="___string"></string>
	<string name="_____string"></string>
	<string name="_______string"></string>
	<string name="ingredient">재료 이름</string>
	<string name="yam">YORMOT</string>
	<string name="minute">30m</string>
	<string name="food_ingredients">재료 : </string>
	<string name="calory">300kcal</string>
</resources>