<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/login_home" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_login_home_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__login_home_ek2"
					android:layout_width="360dp"
					android:layout_height="640dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__login_home_ek2_shape" />

				<ImageView
					android:id="@+id/down_bar"
					android:layout_width="360dp"
					android:layout_height="74dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="568.66dp"
					android:contentDescription="down_bar"
					android:src="@drawable/down_bar" />

				<ImageView
					android:id="@+id/upbar1"
					android:layout_width="360dp"
					android:layout_height="67dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="-2dp"
					android:contentDescription="upbar1"
					android:src="@drawable/upbar1" />


				<RelativeLayout
					android:id="@+id/search_icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="316dp"
					android:layout_marginTop="69.66dp" />

				<RelativeLayout
					android:id="@+id/home_logo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="80dp"
					android:layout_marginTop="578dp">

					<View
						android:id="@+id/home_logo1"
						android:layout_width="46dp"
						android:layout_height="match_parent"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/home_logo" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/recipe_logo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="180dp"
					android:layout_marginTop="578dp">

					<View
						android:id="@+id/recipe_logo1"
						android:layout_width="42dp"
						android:layout_height="match_parent"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/recipe_logo" />
					/>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/mypage_logo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="270dp"
					android:layout_marginTop="578dp">

					<View
						android:id="@+id/mypage_logo1"
						android:layout_width="42dp"
						android:layout_height="match_parent"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/mypage_logo" />

				</RelativeLayout>

				<TextView
					android:id="@+id/yormot_text"
					android:layout_width="83dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="152dp"
					android:layout_marginTop="14dp"
					android:gravity="top"
					android:text="@string/yormot_text"
					android:textAppearance="@style/yormot_text" />

				<TextView
					android:id="@+id/in"
					android:layout_width="19dp"
					android:layout_height="22dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="29dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="83dp"
					android:text="@string/in"
					android:textAppearance="@style/in"
					android:gravity="top"
					/>
				<View
					android:id="@+id/inbox"
					android:layout_width="114dp"
					android:layout_height="36dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="22dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="111dp"
					android:background="@drawable/ingre_buttonbox"
					/>
				<View
					android:id="@+id/x_button1"
					android:layout_width="23dp"
					android:layout_height="22dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="106dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="118dp"
					android:background="@drawable/x_button"
					/>

				<View
					android:id="@+id/plus_button1"
					android:layout_width="23dp"
					android:layout_height="22dp"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:layout_marginStart="140dp"
					android:layout_marginTop="119dp"
					android:background="@drawable/plus_button" />

				<View
					android:id="@+id/outbox1"
					android:layout_width="114dp"
					android:layout_height="36dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="22dp"
					android:layout_marginTop="200dp"
					android:background="@drawable/ingre_buttonbox" />
				<View
					android:id="@+id/x_button2"
					android:layout_width="23dp"
					android:layout_height="22dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="106dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="205dp"
					android:background="@drawable/x_button"
					/>

				<View
					android:id="@+id/outbox2"
					android:layout_width="114dp"
					android:layout_height="36dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="152dp"
					android:layout_marginTop="200dp"
					android:background="@drawable/ingre_buttonbox" />
				<View
					android:id="@+id/x_button3"
					android:layout_width="23dp"
					android:layout_height="22dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="236dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="205dp"
					android:background="@drawable/x_button"
					/>

				<View
					android:id="@+id/plus_button2"
					android:layout_width="23dp"
					android:layout_height="22dp"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:layout_marginStart="275dp"
					android:layout_marginTop="205dp"
					android:background="@drawable/plus_button" />

				<TextView
					android:id="@+id/out"
					android:layout_width="39dp"
					android:layout_height="22dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="29dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="170dp"
					android:text="@string/out"
					android:textAppearance="@style/out"
					android:gravity="top"
					/>

				<View
					android:id="@+id/checkbox1"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="25dp"
					android:layout_marginTop="270dp"
					android:background="@drawable/checkbox" />

				<TextView
					android:id="@+id/korean"
					android:layout_width="45dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="47dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="300dp"
					android:text="@string/korean"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>

				<View
					android:id="@+id/checkbox2"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="135dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="270dp"
					android:background="@drawable/checkbox"
					/>

				<TextView
					android:id="@+id/western"
					android:layout_width="49dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="156dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="300dp"
					android:text="@string/western"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>


				<View
					android:id="@+id/checkbox3"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="245dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="270dp"
					android:background="@drawable/checkbox"
					/>

				<TextView
					android:id="@+id/japanses"
					android:layout_width="49dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="265dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="300dp"
					android:text="@string/japanese"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>


				<View
					android:id="@+id/checkbox4"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="25dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="379dp"
					android:background="@drawable/checkbox"
					/>

				<TextView
					android:id="@+id/chinese"
					android:layout_width="49dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="47dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="409dp"
					android:text="@string/chinese"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>

				<View
					android:id="@+id/checkbox5"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="135dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="379dp"
					android:background="@drawable/checkbox"
					/>
				<TextView
					android:id="@+id/some_id"
					android:layout_width="69dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="145dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="409dp"
					android:text="@string/conv"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>
				<View
					android:id="@+id/checkbox6"
					android:layout_width="90dp"
					android:layout_height="90dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="245dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="379dp"
					android:background="@drawable/checkbox"
					/>
				<TextView
					android:id="@+id/snack"
					android:layout_width="49dp"
					android:layout_height="29dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="265dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="409dp"
					android:text="@string/snack"
					android:textAppearance="@style/snack"
					android:gravity="top"
					/>



			</RelativeLayout>
		</RelativeLayout>
	</ScrollView>
</HorizontalScrollView>