<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ScrollView android:id="@+id/login_home" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/page_login_home_ek1"
			android:layout_marginTop="0dp"
			android:layout_marginStart="0dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<View
				android:id="@+id/_bg__login_home_ek2"
				android:layout_width="360dp"
				android:layout_height="640dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/_bg__login_home_ek2_shape" />

			<ImageView
				android:id="@+id/down_bar"
				android:layout_width="360dp"
				android:layout_height="74dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="568.66dp"
				android:contentDescription="down_bar"
				android:src="@drawable/down_bar" />

			<ImageView
				android:id="@+id/upbar1"
				android:layout_width="360dp"
				android:layout_height="67dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="-2dp"
				android:contentDescription="upbar1"
				android:src="@drawable/upbar1" />

			<View
				android:id="@+id/upbar2"
				android:layout_width="360dp"
				android:layout_height="44dp"
				android:layout_marginStart="-1dp"
				android:layout_marginTop="64.66dp"
				android:background="@drawable/upbar2_shape" />

			<View   android:id="@+id/search_bar"
				android:background="@drawable/search_bar_shape"
				android:layout_marginStart="57dp"
				android:layout_marginTop="69.66dp"
				android:layout_width="244dp"
				android:layout_height="36dp" />

			<RelativeLayout android:id="@+id/search_icon"
				android:layout_marginTop="69.66dp"
				android:layout_marginStart="316dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/search_icon" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/recommend_food_design"
				android:layout_marginTop="126.28dp"
				android:layout_marginStart="22dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/recommend_foodpic"
					android:layout_width="318dp"
					android:layout_height="240.8dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/recommend_foodpic_shape" />

				<View
					android:id="@+id/food_infobar"
					android:layout_width="317dp"
					android:layout_height="71.42dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="169.38dp"
					android:background="@drawable/food_infobar_shape" />

				<ImageView
					android:id="@+id/line_foodinfo2"
					android:layout_width="2dp"
					android:layout_height="20dp"
					android:layout_marginStart="210dp"
					android:layout_marginTop="210dp"
					android:contentDescription="line_foodinfo2"
					android:src="@drawable/line_foodinfo2" />

				<ImageView
					android:id="@+id/line_foodinfo1"
					android:layout_width="2dp"
					android:layout_height="20dp"
					android:layout_marginStart="100dp"
					android:layout_marginTop="210dp"
					android:contentDescription="line_foodinfo1"
					android:src="@drawable/line_foodinfo1" />

			</RelativeLayout>
			<View   android:id="@+id/rectangle_40"
				android:background="@drawable/rectangle_40_shape"
				android:layout_marginStart="23dp"
				android:layout_marginTop="423dp"
				android:layout_width="318dp"
				android:layout_height="146dp" />

			<!-- Login -->
			<TextView
				android:id="@+id/login"
				android:layout_width="52dp"
				android:layout_height="30dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_marginLeft="2dp"
				android:layout_marginTop="75dp"
				android:gravity="center_horizontal|top"
				android:text="@string/login"
				android:textAppearance="@style/login" />

			<!-- food_name -->
			<TextView
				android:id="@+id/food_name"
				android:layout_width="115dp"
				android:layout_height="30dp"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="122dp"
				android:layout_alignParentTop="true"
				android:layout_marginTop="305dp"
				android:text="@string/food_name"
				android:textAppearance="@style/food_name"
				android:gravity="center_horizontal|top"
				/>

			<!-- level -->
			<TextView
				android:id="@+id/level"
				android:layout_width="84dp"
				android:layout_height="17.4dp"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="33dp"
				android:layout_alignParentTop="true"
				android:layout_marginTop="333.78dp"
				android:text="@string/level"
				android:textAppearance="@style/level"
				android:gravity="top"
				/>

			<!-- 30분 -->
			<TextView
				android:id="@+id/some_id"
				android:layout_width="36dp"
				android:layout_height="17.4dp"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="163dp"
				android:layout_alignParentTop="true"
				android:layout_marginTop="333.78dp"
				android:text="@string/time"
				android:textAppearance="@style/time"
				android:gravity="top"
				/>

			<!-- 300 kcal -->
			<TextView
				android:id="@+id/kcal"
				android:layout_width="64dp"
				android:layout_height="17.4dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_marginLeft="259dp"
				android:layout_marginTop="333.78dp"
				android:gravity="top"
				android:text="@string/kcal"
				android:textAppearance="@style/kcal" />

			<RelativeLayout android:id="@+id/home_logo"
				android:layout_marginTop="578dp"
				android:layout_marginStart="80dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/home_logo1"
					android:layout_width="46dp"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/home_logo" />
			</RelativeLayout>

			<RelativeLayout android:id="@+id/recipe_logo"
				android:layout_marginTop="578dp"
				android:layout_marginStart="180dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/recipe_logo1"
					android:layout_width="42dp"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/recipe_logo" />
			</RelativeLayout>

			<RelativeLayout android:id="@+id/mypage_logo"
				android:layout_marginTop="578dp"
				android:layout_marginStart="270dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/mypage_logo1"
					android:layout_width="42dp"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/mypage_logo" />

			</RelativeLayout>

			<TextView
				android:id="@+id/yormot_text"
				android:layout_width="83dp"
				android:layout_height="40dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_marginLeft="152dp"
				android:layout_marginTop="14dp"
				android:gravity="top"
				android:text="@string/yormot_text"
				android:textAppearance="@style/yormot_text" />

			</RelativeLayout>
	</ScrollView>
</HorizontalScrollView>