<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		untitled
	 *	@date 		1653379695405
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login_home" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_home_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__login_home_ek2"
					android:layout_width="360dp"
					android:layout_height="640dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__login_home_ek2_shape" />

				<ImageView
					android:id="@+id/upbar1"
					android:layout_width="360dp"
					android:layout_height="67dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="-2dp"
					android:contentDescription="upbar1"
					android:src="@drawable/upbar1" />


				<RelativeLayout android:id="@+id/recommend_food_design"
					android:layout_marginTop="70dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
						android:id="@+id/recommend_foodpic"
						android:layout_width="318dp"
						android:layout_height="240.8dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/recommend_foodpic_shape" />

					<View
						android:id="@+id/food_infobar"
						android:layout_width="317dp"
						android:layout_height="71.42dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="169.38dp"
						android:background="@drawable/food_infobar_shape" />

					<ImageView
						android:id="@+id/line_foodinfo2"
						android:layout_width="2dp"
						android:layout_height="20dp"
						android:layout_marginStart="210dp"
						android:layout_marginTop="210dp"
						android:contentDescription="line_foodinfo2"
						android:src="@drawable/line_foodinfo2" />

					<ImageView
						android:id="@+id/line_foodinfo1"
						android:layout_width="2dp"
						android:layout_height="20dp"
						android:layout_marginStart="100dp"
						android:layout_marginTop="210dp"
						android:contentDescription="line_foodinfo1"
						android:src="@drawable/line_foodinfo1" />

					<View
						android:id="@+id/bookmark"
						android:layout_width="38dp"
						android:layout_height="50dp"
						android:layout_marginLeft="280dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/bookmark" />


				</RelativeLayout>

				<RelativeLayout android:id="@+id/recommend_food_design2"
					android:layout_marginTop="400dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
						android:id="@+id/recommend_foodpic"
						android:layout_width="318dp"
						android:layout_height="235dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/recommend_foodpic_shape" />

					<View
						android:id="@+id/food_infobar"
						android:layout_width="317dp"
						android:layout_height="71.42dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="169.38dp"
						android:background="@drawable/food_infobar_shape" />

					<ImageView
						android:id="@+id/line_foodinfo2"
						android:layout_width="2dp"
						android:layout_height="20dp"
						android:layout_marginStart="210dp"
						android:layout_marginTop="210dp"
						android:contentDescription="line_foodinfo2"
						android:src="@drawable/line_foodinfo2" />

					<ImageView
						android:id="@+id/line_foodinfo1"
						android:layout_width="2dp"
						android:layout_height="20dp"
						android:layout_marginStart="100dp"
						android:layout_marginTop="210dp"
						android:contentDescription="line_foodinfo1"
						android:src="@drawable/line_foodinfo1" />

					<View
						android:id="@+id/bookmark"
						android:layout_width="38dp"
						android:layout_height="50dp"
						android:layout_marginLeft="280dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/bookmark" />


				</RelativeLayout>


				<!-- food_name -->
				<TextView
					android:id="@+id/food_name"
					android:layout_width="115dp"
					android:layout_height="30dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="122dp"
					android:layout_marginTop="245dp"
					android:gravity="center_horizontal|top"
					android:text="@string/food_name"
					android:textAppearance="@style/food_name" />
				<TextView
					android:id="@+id/food_name2"
					android:layout_width="115dp"
					android:layout_height="30dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="122dp"
					android:layout_marginTop="570dp"
					android:gravity="center_horizontal|top"
					android:text="@string/food_name"
					android:textAppearance="@style/food_name" />


				<!-- level -->
				<TextView
					android:id="@+id/level"
					android:layout_width="84dp"
					android:layout_height="30dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="273.78dp"
					android:gravity="top"
					android:text="@string/level"
					android:textAppearance="@style/level" />

				<!-- level -->
				<TextView
					android:id="@+id/level1"
					android:layout_width="84dp"
					android:layout_height="30dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="610dp"
					android:gravity="top"
					android:text="@string/level"
					android:textAppearance="@style/level" />

				<!-- 30분 -->
				<TextView
					android:id="@+id/some_id"
					android:layout_width="36dp"
					android:layout_height="17.4dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="163dp"
					android:layout_marginTop="273.78dp"
					android:gravity="top"
					android:text="@string/time"
					android:textAppearance="@style/time" />
				<!-- 30분 -->
				<TextView
					android:id="@+id/some_id2"
					android:layout_width="36dp"
					android:layout_height="17.4dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="163dp"
					android:layout_marginTop="610dp"
					android:gravity="top"
					android:text="@string/time"
					android:textAppearance="@style/time" />

				<!-- 300 kcal -->
				<TextView
					android:id="@+id/kcal"
					android:layout_width="64dp"
					android:layout_height="17.4dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="259dp"
					android:layout_marginTop="273.78dp"
					android:gravity="top"
					android:text="@string/kcal"
					android:textAppearance="@style/kcal" />
				<!-- 300 kcal -->
				<TextView
					android:id="@+id/kcal"
					android:layout_width="64dp"
					android:layout_height="17.4dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="259dp"
					android:layout_marginTop="610dp"
					android:gravity="top"
					android:text="@string/kcal"
					android:textAppearance="@style/kcal" />

				<ImageView
					android:id="@+id/bookmark_on"
					android:layout_width="32dp"
					android:layout_height="29.3dp"
					android:layout_marginStart="298dp"
					android:layout_marginTop="242.07dp"
					android:contentDescription="bookmark_on"
					android:src="@drawable/bookmark_on" />
				<ImageView
					android:id="@+id/bookmark_on"
					android:layout_width="32dp"
					android:layout_height="29.3dp"
					android:layout_marginStart="298dp"
					android:layout_marginTop="570dp"
					android:contentDescription="bookmark_on"
					android:src="@drawable/bookmark_on" />


				<TextView
					android:id="@+id/yormot_text"
					android:layout_width="83dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="152dp"
					android:layout_marginTop="14dp"
					android:gravity="top"
					android:text="@string/yormot_text"
					android:textAppearance="@style/yormot_text" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>